<resources>
    <string name="app_name">Componentes</string>
    <string name="boton">Botón</string>
    <string name="cosas" translatable="false">ImageButton y un botón con imagen</string>
    <string name="toggle" translatable="false">ToggleButton</string>
    <string name="activado" translatable="false">Activado</string>
    <string name="desactivado" translatable="false">Desactivado</string>
    <string name="checkbox1" translatable="false">Checkbox1</string>
    <string name="checkbox2" translatable="false">Checkbox2</string>
    <string name="checkbox3" translatable="false">Checkbox3</string>
    <string name="seekbar" translatable="false">Seekbar</string>
    <string name="rating" translatable="false">RatingBar</string>
    <string name="nombre" translatable="false">Introduce tu nombre</string>
    <string name="volver" translatable="false">volver</string>
    <string name="tel" translatable="false">Teléfono</string>
    <string name="llamar" translatable="false">Llamar</string>
    <string name="borrar" translatable="false">Borrar</string>
    <string name="nuevo" translatable="false">Nuevo</string>
    <string name="editar" translatable="false">Editar</string>
    <string name="opc1" translatable="false">opc1</string>
    <string name="opc2" translatable="false">opc2</string>
    <string name="ocultar" translatable="false">Ocultar</string>
    <string name="mostrar" translatable="false">Mostrar</string>
    <string name="submenu" translatable="false">Submenu</string>
</resources>