<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nuevo"
        android:title="@string/nuevo"
        app:showAsAction="always|withText">
        <menu >
            <item
                android:id="@+id/opc1"
                android:title="@string/opc1" />
            <item
                android:id="@+id/opc2"
                android:title="@string/opc2" />
        </menu>
    </item>
    <item
        android:id="@+id/borrar"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/borrar"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/editar"
        android:title="@string/editar"
        app:showAsAction="never" ></item>
</menu>